# rtab

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  rename.sh  setup.cfg  setup.py  sonar-project.properties  tox.ini
rt/: __init__.py  __main__.py  base_helper.py  cli.py  csv_helper.py  file_helper.py  json_helper.py  yaml_helper.py
rtab/: __init__.py  __main__.py  base_helper.py  cli.py  context_highlighter.py  csv_helper.py  file_helper.py  json_helper.py  yaml_helper.py
snap/: snapcraft.yaml
tests/: test.json  test.yaml
tests/functional/: test_outputs.py
tests/resources/: test-golden.json  test-golden.yaml  test.csv  test.out  test.yaml  test_small.json  test_small.yaml
tests/resources/test_data/: test.csv
tests/unit/: test.json  test_base.py  test_cli.py  test_csv.py  test_file.py  test_json.py  test_main.py  test_yaml.py
