[metadata]
name = rt
# See setup.py version generator
url = https://github.com/nishant-dash/rt
description = A collection of handy wrapper tools for operators of kubeflow environments
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
author = Nishant Dash
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT
    Operating System :: OS Independent
    Topic :: System :: Installation/Setup
    Topic :: Utilities
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
python_requires = >=3.10
packages = find:
install_requires =
    PyYaml
    rich
    typer

[options.extras_require]
lint =
    flake8
    flake8-docstrings
    flake8-colors
    pyproject-flake8
    pylint
    mypy
    black
    isort
    pylint
    mypy
    types-PyYAML
    codespell

unittests =
    pytest
    pytest-cov
    pytest-mock
    pytest-asyncio
    aiounittest
    gevent

[options.packages.find]
exclude =
    tests

[options.package_data]
* =
    *.csv

[options.entry_points]
console_scripts =
    rt = rt:main

[aliases]
test = pytest
